--- a/frontend/src/components/ResultsModal.css
+++ b/frontend/src/components/ResultsModal.css
@@ -35,9 +35,11 @@
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+
 .song-info {
   flex: 1;
 }
+
 
 .song-title {
   font-weight: 600;
@@ -54,13 +56,14 @@
 .match-info {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   min-width: 120px;
 }
 
 .match-rank {
   font-weight: 600;
   color: black;
+  font-size: 1.5em; 
   margin-bottom: 0.5rem;
 }
 
