--- a/frontend/src/components/ResultsModal.css
+++ b/frontend/src/components/ResultsModal.css
@@ -35,11 +35,9 @@
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-
 .song-info {
   flex: 1;
 }
-
 
 .song-title {
   font-weight: 600;
@@ -56,14 +54,13 @@
 .match-info {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   min-width: 120px;
 }
 
-.match-rank {
+.match-percentage {
   font-weight: 600;
   color: black;
-  font-size: 1.5em; 
   margin-bottom: 0.5rem;
 }
 
